--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
-    "exprss": "^0.0.1-security",
+    "express": "^4.17.3",
     "mongodb": "^4.5.0"
   }
 }
